# spicy

./: .flake8  .gitignore  .pypirc  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: python-app.yml
spicy/: __init__.py  bases.py  enums.py  html.py  html_attrs.py  html_tags.py  tags.py  tree.py  xml_tags.py
spicy/dom/base/: attribute.py  document.py  tag.py
spicy/dom/html/: document.py  enum_.py  tag.py
spicy/dom/xml/: document.py  enum_.py  tag.py
spicy/parser/attributes/: attributes.py
spicy/parser/documents/: __init__.py  bases.py  html.py  xml.py
spicy/parser/tags/: __init__.py  bases.py  html.py  xml.py
spicy/tree/: __init__.py  base.py  tree.py
spicy/utils/: config.py  enums.py  exceptions.py
tests/: mini-test.html  original.html  spiced.html  test.html  test.py  test_broad1.html  test_html.py  test_xml.py
tests/docs/html/: dnevnik.html  test_broad1.html  test_broad2.html  test_comment.html
tests/test_html/: test_html.py
